Fixed uneven padding on signed in avatar

--- a/whoahqa/static/css/custom.css
+++ b/whoahqa/static/css/custom.css
@@ -33,6 +33,10 @@
 	padding:.6em 0 0 1.7em;
 	width:60%;
 }
+#header-top .dropdown-toggle{
+	padding-top:0.8em;
+	padding-bottom:0.7em;
+}
 
 .underline{ text-decoration:underline; }
 
